shift gameDiv to another div and added a  heading for the game

--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
 </head>
 <body>
     <script src="game.js" defer></script>
-    <div id="gameBoard">
-
-        <div>
-            <div class="game-box" id="cell-6"></div>
-            <div class="game-box" id="cell-3"></div>
-            <div class="game-box" id="cell-0"></div>
-        </div>
-        <div>
-            <div class="game-box" id="cell-7"></div>
-            <div class="game-box" id="cell-4"></div>
-            <div class="game-box" id="cell-1"></div>
-        </div>
-        <div>
-            <div class="game-box" id="cell-8"></div>
-            <div class="game-box" id="cell-5"></div>
-            <div class="game-box" id="cell-2"></div>
+    <div>
+        <div id="gameBoard">
+            <div>
+                <div class="game-box" id="cell-6"></div>
+                <div class="game-box" id="cell-3"></div>
+                <div class="game-box" id="cell-0"></div>
+            </div>
+            <div>
+                <div class="game-box" id="cell-7"></div>
+                <div class="game-box" id="cell-4"></div>
+                <div class="game-box" id="cell-1"></div>
+            </div>
+            <div>
+                <div class="game-box" id="cell-8"></div>
+                <div class="game-box" id="cell-5"></div>
+                <div class="game-box" id="cell-2"></div>
+            </div>
         </div>
     </div>
+    <h3>Tic Tac Toe</h3>
 </body>
 </html>
